init npm package.json changed name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calculator",
+  "name": "@anagillara/calculator",
   "version": "1.0.0",
   "description": "Calculator",
   "repository": {
