--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -25,6 +25,6 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.tokenpkg }}" > ~/.npmrc
       - run: npm publish
-       
+        env:
+          NODE_AUTH_TOKEN: ${secrets.tokenpkg}
